コメント有無表示

--- a/app/assets/stylesheets/_color.scss
+++ b/app/assets/stylesheets/_color.scss
@@ -19,6 +19,9 @@ $whitegray: #F5F5F5;
 .text-fontgray {
   color: $fontgray;
 }
+.text-icongray {
+  color: $icongray;
+}
 .btn-royalgreen {
   background: $royalgreen;
 }
