--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -28,8 +28,11 @@
                 <%= image_tag 'popaisekine.jpg', class: 'rounded-circle trainer-image mx-auto d-block mono' %>
               </div>
               <div class='col-2 mx-auto p-0 pt-1 pl-1 text-center h-100 comment-icon'>
-                <i class='fas fa-comment-alt'></i>
-                <%# <i class='far fa-comment-alt'></i> %>
+                <% if record.comments.any? %>
+                  <i class='fas fa-comment-alt text-royalgreen'></i>
+                <% else %>
+                  <i class='fas fa-comment-alt text-icongray'></i>
+                <% end %>
               </div>
             </div>
           <% end %>
