--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -49,7 +49,7 @@
             <% end %>
           </div>
           <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
-            <%= link_to '#' do %>
+            <%= link_to destroy_user_session_path, method: :delete do %>
               <div class='footer-icon w-100'>
                 <i class='fas fa-cog'></i>
               </div>
