ルーティング修正

--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -37,7 +37,7 @@
       <div class='container mw-1024'>
         <div class='row'>
           <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
-            <%= link_to records_path do %>
+            <%= link_to users_records_path do %>
               <%# <div class='footer-icon w-100'> %>
               <div class='footer-icon'>
                 <i class='far fa-list-alt'></i>
