--- a/app/views/users/records/_record_exercise_fields.html.erb
+++ b/app/views/users/records/_record_exercise_fields.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class='col-2 p-0'>
-        <% part_options = Part.order(:id).map { |p| [p.name, p.id, data: { children_path: part_exercises_path(p) }] } %>
+        <% part_options = Part.order(:id).map { |p| [p.name, p.id, data: { children_path: users_part_exercises_path(p) }] } %>
         <%= f.select :part_id, part_options, { prompt: '--' }, class: 'select-parent form-control part-form' %>
       </div>
       <div class='col-7 p-0 pl-2'>
