--- a/app/views/users/records/index.html.erb
+++ b/app/views/users/records/index.html.erb
@@ -4,7 +4,7 @@
     <div class='col-12 mx-auto record p-0'>
       <div class='record-index form'>
         <% @records.each do |record| %>
-          <%= link_to record_path(record) do %>
+          <%= link_to users_record_path(record) do %>
             <div class='row bg-white p-3 record-row mx-auto'>
               <div class='col-2 mx-auto p-0 pt-1 text-royalgreen text-center record-row-day'>
                 <%= record.created_at.strftime('%a').upcase %>
@@ -39,7 +39,7 @@
         <% end %>
       </div>
       <div class='record-new rounded-circle bg-royalgreen'>
-        <%= link_to new_record_path do %>
+        <%= link_to new_users_record_path do %>
           <%= image_tag 'record-new.png', class: 'record-new-image mx-auto d-block' %>
         <% end %>
       </div>
