--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -303,4 +303,17 @@ input {
     font-size: 30px;
     line-height: 60px;
   }
+  .trainer-confirm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .trainer-confirm-content {
+    margin: 0.5rem;
+    margin-bottom: 0;
+    width: calc(100vw - 1rem);
+    max-width: 500px;
+    border-radius: 1rem;
+    // height: 101px;
+  }
 }
