--- a/app/views/users/records/index.html.erb
+++ b/app/views/users/records/index.html.erb
@@ -2,7 +2,7 @@
 <div class='container mw-1024'>
   <div class='row'>
     <div class='col-12 mx-auto record p-0'>
-      <div class='record-index form'>
+      <div class='record-index form pb-2'>
         <% @records.each do |record| %>
           <%= link_to users_record_path(record) do %>
             <div class='row bg-white p-3 record-row mx-auto'>
