--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -36,24 +36,36 @@
     <footer class=''>
       <div class='container mw-1024'>
         <div class='row'>
-          <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
+          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
             <%= link_to users_records_path do %>
-              <%# <div class='footer-icon w-100'> %>
               <div class='footer-icon'>
                 <i class='far fa-list-alt'></i>
               </div>
-              <%# <div class='footer-text w-100'> %>
-              <div class='footer-text'>
+              <div class='footer-text-record'>
+                マイ
+                <br>
                 レコード
               </div>
             <% end %>
           </div>
-          <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
+          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
+            <%= link_to users_records_path do %>
+              <div class='footer-icon'>
+                <i class='far fa-list-alt'></i>
+              </div>
+              <div class='footer-text-record'>
+                クライアント
+                <br>
+                レコード
+              </div>
+            <% end %>
+          </div>
+          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
             <%= link_to users_dashboards_path do %>
               <div class='footer-icon w-100'>
                 <i class='fas fa-cog'></i>
               </div>
-              <div class='footer-text w-100'>
+              <div class='footer-text'>
                 設定
               </div>
             <% end %>
@@ -64,4 +76,3 @@
     </footer>
   </body>
 </html>
-
