--- a/app/views/layouts/users.html.erb
+++ b/app/views/layouts/users.html.erb
@@ -36,41 +36,65 @@
     <footer class=''>
       <div class='container mw-1024'>
         <div class='row'>
-          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
-            <%= link_to users_records_path do %>
-              <div class='footer-icon'>
-                <i class='far fa-list-alt'></i>
-              </div>
-              <div class='footer-text-record'>
-                マイ
-                <br>
-                レコード
-              </div>
-            <% end %>
-          </div>
-          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
-            <%= link_to users_records_path do %>
-              <div class='footer-icon'>
-                <i class='far fa-list-alt'></i>
-              </div>
-              <div class='footer-text-record'>
-                クライアント
-                <br>
-                レコード
-              </div>
-            <% end %>
-          </div>
-          <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
-            <%= link_to users_dashboards_path do %>
-              <div class='footer-icon w-100'>
-                <i class='fas fa-cog'></i>
-              </div>
-              <div class='footer-text'>
-                設定
-              </div>
-            <% end %>
-          </div>
-          </div>
+          <% if current_user.trainer? %>
+            <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
+              <%= link_to users_records_path do %>
+                <div class='footer-icon'>
+                  <i class='far fa-list-alt'></i>
+                </div>
+                <div class='footer-text-record'>
+                  マイ
+                  <br>
+                  レコード
+                </div>
+              <% end %>
+            </div>
+            <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
+              <%= link_to users_client_records_path do %>
+                <div class='footer-icon'>
+                  <i class='far fa-list-alt'></i>
+                </div>
+                <div class='footer-text-record'>
+                  クライアント
+                  <br>
+                  レコード
+                </div>
+              <% end %>
+            </div>
+            <div class='col-4 mx-auto p-0 footer bg-whitegray text-center'>
+              <%= link_to users_dashboards_path do %>
+                <div class='footer-icon w-100'>
+                  <i class='fas fa-cog'></i>
+                </div>
+                <div class='footer-text'>
+                  設定
+                </div>
+              <% end %>
+            </div>
+          <% else %>
+            <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
+              <%= link_to users_records_path do %>
+                <div class='footer-icon'>
+                  <i class='far fa-list-alt'></i>
+                </div>
+                <div class='footer-text-record'>
+                  マイ
+                  <br>
+                  レコード
+                </div>
+              <% end %>
+            </div>
+            <div class='col-6 mx-auto p-0 footer bg-whitegray text-center'>
+              <%= link_to users_dashboards_path do %>
+                <div class='footer-icon w-100'>
+                  <i class='fas fa-cog'></i>
+                </div>
+                <div class='footer-text'>
+                  設定
+                </div>
+              <% end %>
+            </div>
+          <% end %>
         </div>
       </div>
     </footer>
