--- a/app/views/users/client_records/index.html.erb
+++ b/app/views/users/client_records/index.html.erb
@@ -7,7 +7,11 @@
           <%= link_to users_record_path(record) do %>
             <div class='row bg-white p-3 record-row mx-auto'>
               <div class='col-3 mx-auto p-0 pr-2 pt-1'>
-                <%= image_tag 'popaisekine.jpg', class: 'rounded-circle trainer-image mx-auto d-block mono' %>
+                <% if record.user.icon_image %>
+                  <%= image_tag record.user.icon_image_url(:small), class: 'rounded-circle trainer-image mx-auto d-block' %>
+                <% else %>
+                  <%= image_tag 'noimage.png', class: 'rounded-circle trainer-image mx-auto d-block' %>
+                <% end %>
                 <p class='text-fontgray text-center mb-0'>
                   <%= record.user.nickname %>
                 </p>
