--- a/app/views/users/records/index.html.erb
+++ b/app/views/users/records/index.html.erb
@@ -25,7 +25,11 @@
                 </ul>
               </div>
               <div class='col-3 mx-auto p-0 pr-2 pl-1 pt-1'>
-                <%= image_tag 'popaisekine.jpg', class: 'rounded-circle trainer-image mx-auto d-block mono' %>
+                <% if current_user.trainer.icon_image %>
+                  <%= image_tag current_user.trainer.icon_image_url(:small), class: 'rounded-circle trainer-image mx-auto d-block mono' %>
+                <% else %>
+                  <%= image_tag 'noimage.png', class: 'rounded-circle trainer-image mx-auto d-block mono' %>
+                <% end %>
               </div>
               <div class='col-2 mx-auto p-0 pt-1 pl-1 text-center h-100 comment-icon'>
                 <% if record.comments.any? %>
