レコード既読機能

--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -199,6 +199,16 @@ input {
     border-radius: 1rem;
     height: 101px;
   }
+  .record-not-confirm {
+    border: solid 3px $royalgreen;
+  }
+  .record-not-confirm-notice {
+    position: absolute;
+    top: -1rem;
+    left: -0.5rem;
+    font-size: 15px;
+    font-weight: bold;
+  }
   .record-show {
     margin: 0.5rem;
     margin-bottom: 0;
