--- a/app/views/users/records/show.html.erb
+++ b/app/views/users/records/show.html.erb
@@ -1,63 +1,1 @@
-<% provide(:title, 'レコード詳細') %>
-<div class='container mw-1024'>
-  <div class='row'>
-    <div class='col-12 mx-auto record p-0'>
-      <div class='record-index form'>
-        <div class='row bg-white p-3 record-show mx-auto'>
-          <div class='col-12 mx-auto h-100 p-0'>
-            <div class='row record-show-day text-center d-flex align-items-end'>
-              <div class='col-12 mx-auto record-show-day-text'>
-                <span class='text-royalgreen'><%= @record.created_at.strftime('%Y.%m.%d %a').upcase %></span>
-                <div class='record-edit'>
-                  <i class='far fa-edit align-text-top text-fontgray'></i>
-                </div>
-              </div>
-            </div>
-            <% if @comments %>
-              <div class='row record-show-detail'>
-            <% else %>
-              <div class='row record-show-detail full-detail'>
-            <% end %>
-              <div class='col-12 p-0'>
-                <% @record.record_exercises.each do |record_exercise| %>
-                  <div class='row'>
-                    <ul class-'m-0'>
-                      <li><%= "#{record_exercise.exercise.part.name} #{record_exercise.exercise.name}" %></li>
-                      <% record_exercise.exercise_details.each do |exercise_detail| %>
-                        <li class='pl-3'>
-                          <%= "Set#{exercise_detail.set_count} #{exercise_detail.weight}kg × #{exercise_detail.rep_count}reps" %>
-                        </li>
-                      <% end %>
-                    </ul>
-                  </div>
-                <% end %>
-              </div>
-            </div>
-            <% if @comments %>
-              <div class='row record-show-comment border-top border-bottom'>
-            <% else %>
-              <div class='row record-show-comment border-top border-bottom d-none'>
-            <% end %>
-              <div id='comments' class='col-12 p-0 h-100 record-show-comment-outer'>
-                <%= render @comments %>
-              </div>
-            </div>
-            <div class='row mt-2 record-show-comment-new'>
-              <%# <div class='col-10 p-0 h-100 border form-control'> %>
-              <div class='col-10 p-0'>
-                <%= text_field nil, nil, class: 'form-control h-100 border',
-                  'data-behavior': 'comment_speaker',
-                  'data-record': @record.id,
-                  'data-user': current_user.id
-                %>
-              </div>
-              <div class='col-2 p-0 h-100 text-royalgreen text-center'>
-                <i class='fas fa-paper-plane'></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'users/shared/record_show', record: @record, comments: @comments %>
