--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -227,6 +227,28 @@ input {
     line-height: 62px;
     font-size: 2.5rem;
   }
+  .comment-icon-inner {
+    position: relative;
+  }
+  .not-confirm-comment-exit {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin-left: 10px;
+    margin: auto;
+    width: 50px;
+    height: 50px;
+  }
+  .not-confirm-comment-exit-inner {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: auto;
+    width: 20px;
+    height: 20px;
+  }
   .add_fields:hover, .add_fields:focus {
     color: #f8f9fa !important;
   }
