コメント欄の開け閉め機能

--- a/app/assets/stylesheets/_color.scss
+++ b/app/assets/stylesheets/_color.scss
@@ -3,6 +3,7 @@ $commentgreen: #7FFFD4;
 $fontgray: #7F7F7F;
 $icongray: #CFCFCF;
 $whitegray: #F5F5F5;
+$bordergray: #dee2e6;
 
 .bg-royalgreen {
   background: $royalgreen;
