長方形の写真でも真ん丸アイコンとして表示

--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -272,8 +272,9 @@ input {
     }
   }
   .trainer-image {
-    max-height: 60px;
+    height: 60px;
     width: 60px;
+    overflow: hidden;
   }
   .record-new {
     position: absolute;
