レコードの未読既読デザイン修正

--- a/app/views/users/client_records/index.html.erb
+++ b/app/views/users/client_records/index.html.erb
@@ -19,7 +19,7 @@
                 <% else %>
                   <%= image_tag 'noimage.png', class: 'rounded-circle trainer-image mx-auto d-block' %>
                 <% end %>
-                <p class='text-fontgray text-center mb-0'>
+                <p class='text-fontgray text-center mb-0 record-client-name'>
                   <%= record.user.nickname %>
                 </p>
               </div>
