新規登録後にメールを確認するよう促す

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -13,6 +13,7 @@
             </div>
           </div>
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: 'text-fontgray') do |f| %>
+            <%= print_messages %>
             <%= devise_error_messages! %>
             <div class='form-group'>
               <%= f.label 'ニックネーム' %>
