--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,12 +7,12 @@
   </div>
   <div class='row m-5'>
     <div class='col-12 text-center'>
-      <%= link_to 'レコード記録', new_record_path, class: 'puente-bold h4' %>
+      <%= link_to 'レコード記録', new_record_path, class: 'h4' %>
     </div>
   </div>
   <div class='row m-5'>
     <div class='col-12 text-center'>
-      <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'puente-bold h4' %>
+      <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'h4' %>
     </div>
   </div>
 </div>
