ClientRecordsControllerのshowアクションのリファクタリング

--- a/app/views/users/client_records/show.html.erb
+++ b/app/views/users/client_records/show.html.erb
@@ -1,1 +1,1 @@
-<%= render 'users/shared/record_show', record: @record, comments: @comments %>
+<%= render 'users/shared/record_show', record: @record %>
