TrainerRequestControllerのnewアクションとconfirmアクションのリファクタリング

--- a/app/views/users/trainer_requests/confirm.html.erb
+++ b/app/views/users/trainer_requests/confirm.html.erb
@@ -7,11 +7,13 @@
           <div class='col-12 mx-auto h-100 p-0'>
             <div class='row bg-white p-3 trainer-confirm-content mx-auto'>
               <div class='col-12 mx-auto p-0 pt-1 text-royalgreen text-center'>
-                <%= image_tag 'popaisekine.jpg', class: 'rounded-circle trainer-image mx-auto d-block' %>
+                <br>
+                <%= image_tag @trainer_request.trainer.icon_image_url(:small), class: 'rounded-circle mx-auto d-block' %>
+                <br>
                 <span class='text-fontgray'>
                   <%= @trainer_request.trainer.nickname %>
                 </span>
-                <%= link_to 'トレーナーになってもらう', accept_users_trainer_requests_path(request_token: @trainer_request.request_token), method: :patch, class: 'btn btn-block mybtn btn-royalgreen text-light mt-3' %>
+                <%= link_to 'トレーナーになってもらう', accept_users_trainer_requests_path(request_token: @trainer_request.request_token), method: :patch, class: 'btn btn-block mybtn btn-royalgreen text-light mt-4' %>
               </div>
             </div>
           </div>
