トレーナーリクエストのビュー修正

--- a/app/assets/stylesheets/user/_style.scss
+++ b/app/assets/stylesheets/user/_style.scss
@@ -275,6 +275,11 @@ input {
     width: 60px;
     overflow: hidden;
   }
+  .trainer-request-image {
+    height: 60px;
+    width: 60px;
+    overflow: hidden;
+  }
   .record-new {
     position: absolute;
     right: 0.9rem;
