--- a/app/views/users/trainer_requests/confirm.html.erb
+++ b/app/views/users/trainer_requests/confirm.html.erb
@@ -8,7 +8,7 @@
             <div class='row bg-white p-3 trainer-confirm-content mx-auto'>
               <div class='col-12 mx-auto p-0 pt-1 text-royalgreen text-center'>
                 <br>
-                <%= image_tag @trainer_request.trainer.icon_image_url(:small), class: 'rounded-circle mx-auto d-block' %>
+                <%= image_tag @trainer_request.trainer.icon_image_url(:small), class: 'rounded-circle trainer-request-image mx-auto d-block' %>
                 <br>
                 <span class='text-fontgray'>
                   <%= @trainer_request.trainer.nickname %>
